--- a/src/app/modules/form-pago-emergente/form-pago-emergente.component.html
+++ b/src/app/modules/form-pago-emergente/form-pago-emergente.component.html
@@ -1,5 +1,5 @@
 
-<h1 mat-dialog-title>Actualizar Membresia</h1>
+<h1 mat-dialog-title>Pagar Membresia</h1>
 <div mat-dialog-content>
     <form>
         <br>
