--- a/src/app/modules/sucursal-lista/sucursal-lista.component.html
+++ b/src/app/modules/sucursal-lista/sucursal-lista.component.html
@@ -16,7 +16,7 @@
    
    <form>
        <div  class="table-container">
-           <table mat-table  [dataSource]="gimnasio | listarSucursales: page: search">
+           <table mat-table  [dataSource]="dataSource">
                <!-- Título Column -->
 
                <ng-container matColumnDef="estatus">
@@ -137,14 +137,10 @@
                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                <tr mat-row *matRowDef="let item; columns: displayedColumns; let i = index"></tr>
            </table>
-           <div style="text-align: right; margin-bottom: 50px;">
-               <button mat-icon-button color="primary" (click)="prevPage()">
-                 <mat-icon>navigate_before</mat-icon>
-               </button>
-               <button mat-icon-button color="primary" (click)="nextPage()">
-                 <mat-icon>navigate_next</mat-icon>
-               </button>
-             </div>
+           <mat-paginator
+            [pageSizeOptions]="[5, 10, 15, 20]"
+            showFirstLastButtons
+            ></mat-paginator>
            <!--<div style="text-align: right; margin-bottom: 50px;">
                <button mat-icon-button color="primary" (click)="prevPage()">
                    <mat-icon>navigate_before</mat-icon>
