--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -196,7 +196,7 @@
          
       </div>
       
-      <div class="row mt-4" *ngIf="isRecep()">
+      <div class="row mt-4" *ngIf="isRecep() || isAdmin()">
          <div class="col-md-6">
             <div class="card">
                <div class="card-body">
