--- a/src/app/modules/plan-lista/membresias.component.html
+++ b/src/app/modules/plan-lista/membresias.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-4">
-  <h2 class="mb-3">MEMBRESIAS DISPONIBLES</h2>
+  <h2 class="mb-3">PLANES DISPONIBLES</h2>
 <div style="text-align: right;">
-    <button mat-raised-button style="background-color: #fd9727; font-size: 16px;" (click)="openDialog()"><mat-icon>add</mat-icon>AGREGAR MEMBRESIA</button>
+    <button mat-raised-button style="background-color: #fd9727; font-size: 16px;" (click)="openDialog()"><mat-icon>add</mat-icon>AGREGAR PLAN</button>
     <!--<button mat-raised-button style="background-color: #fd9727; font-size: 16px;" (click)="openDialogAddServices()"><mat-icon>add</mat-icon>AGREGAR SERVICIOS</button>-->
   </div>
   <br/>
