--- a/src/app/modules/dialog-select-membership/dialog-select-membership.component.html
+++ b/src/app/modules/dialog-select-membership/dialog-select-membership.component.html
@@ -2,7 +2,7 @@
 
    <div class="title" *ngIf="optionToShow == 1">
     <br>
-        <h1>Agregar Plan</h1>
+        <h1>Agregar membresia</h1>
     </div>
     <div class="title" *ngIf="optionToShow == 2">
         <br>
@@ -10,7 +10,7 @@
     </div>
     <div class="title" *ngIf="optionToShow == 3">
         <br>
-        <h1>Editar Plan</h1>
+        <h1>Editar membresia</h1>
     </div>
     <!--<div class="title" *ngIf="optionToShow == 4">
         <h1>Agregar servicios</h1>
@@ -81,7 +81,7 @@
                         <div class="col-sm-6">
                             <p>
                                 <mat-form-field appearance="outline" style="width: 95%;" required>
-                                    <mat-label>Nombre del plan:</mat-label>
+                                    <mat-label>Nombre de la membresia:</mat-label>
                                     <input type="text" matInput placeholder="Titulo" autocomplete="off" id="titulo" formControlName="titulo">
                                     <mat-error *ngIf="isFieldInvalid('titulo', 'required')">
                                         El título es requerido.
@@ -119,55 +119,66 @@
                     <div class="row">
                         <div class="col-sm-6">
                             <p>
-                                <mat-form-field style="width: 95%;" autocomplete="off" required appearance="outline">
+                                <mat-form-field style="width: 95%;" required appearance="outline">
                                     <mat-label style="font-family: Arial; font-size: 18px;">Seleccionar dias</mat-label>
-                                    <input matInput type="number" name="duracion" id="duracion" formControlName="duracion">
+                                    <mat-select formControlName="duracion" multiple="false" >
+                                        <mat-option  value="1">1 día</mat-option>
+                                        <mat-option  value="15">15 días</mat-option>
+                                        <mat-option  value="30">1 mes</mat-option>
+                                        <mat-option  value="365">1 año</mat-option>
+                                      </mat-select>
                                     <mat-error *ngIf="isFieldInvalid('duracion', 'required')">
                                         la duracion es requerida.
                                       </mat-error>
-                                      <mat-error *ngIf="isFieldInvalid('duracion', 'pattern')">
-                                        Solo se aceptan numeros.
-                                      </mat-error>
                                 </mat-form-field>
+
+
+                           
                             </p>
                             <p>
                                 <label for="detalles" class="large-text">Detalles:</label>
-                                <mat-form-field style="display: inline-block; width: 95%; height: 110px;" required>
+                                <mat-form-field style="display: inline-block; width: 95%; height: 110px;" required appearance="outline">
                                     <mat-label>Detalles</mat-label>
                                     <textarea class="textarea" matInput rows="4" placeholder="Detalles" cols="50" style="display: inline-block; width: 100%;height: 100%;" id="detalles" formControlName="detalles"> </textarea>
-                                    <mat-error *ngIf="isFieldInvalid('detalles', 'required')">
-                                        El detalle es requerido.
-                                      </mat-error>
-                                      <mat-error *ngIf="isFieldInvalid('detalles', 'pattern')">
-                                        Solo se aceptan letras.
-                                      </mat-error>
+                                    
                                 </mat-form-field>
                             </p>
                         </div>
                         <div class="col-sm-6">
-                            <p>
+                          <!--  <p>
                                 <mat-form-field required appearance="outline" style="width: 95%;">
                                     <mat-label style="font-family: Arial; font-size: 18px;">Seleccionar servicios</mat-label>
                                     <mat-select formControlName="servicioseleccionado" multiple (selectionChange)="$event.value ? setPrice($event.value) : null">
-                                        <!--<mat-option *ngFor="let servicio of servicios" [value]="servicio">
-                                            {{servicio.nombre_servicio}}.......${{servicio.precio_unitario}}
-                                        </mat-option>-->
+                                        
                                         <ng-container *ngFor="let servicio of servicios" style="margin-left: 100px;">
                                             <mat-option *ngIf="optionToShow == 1 || optionToShow == 3 && dataToUpdate.tipo_membresia == 1 || dataToUpdate.tipo_membresia == 0" [value]="servicio">
                                               {{servicio.nombre_servicio}}
                                             </mat-option>
                                           </ng-container>
-                                        <!--<ng-container *ngFor="let servicio of servicios">
-                                            <mat-option *ngIf="selection==2 || optionToShow == 3 && dataToUpdate.tipo_membresia == 2" [value]="servicio">
-                                              ${{servicio.precio_unitario}}-{{servicio.nombre_servicio}}
-                                            </mat-option>
-                                          </ng-container>-->
+                                      
                                     </mat-select>
                                     <mat-error *ngIf="isFieldInvalid('servicioseleccionado', 'required')">
                                         los servicios son requeridos.
                                       </mat-error>
                                 </mat-form-field>
-                            </p>
+                            </p>-->
+                            <p>
+                                <mat-form-field required appearance="outline" style="width: 95%;">
+                                  <mat-label style="font-family: Arial; font-size: 18px;">Seleccionar servicio</mat-label>
+                                  
+                                  <mat-select formControlName="servicioseleccionado" multiple="false">
+                                    <mat-option *ngFor="let servicio of servicios" [value]="servicio">
+                                      {{servicio.nombre_servicio}}
+                                    </mat-option>
+                                  </mat-select>
+                                  
+                                  <mat-error *ngIf="isFieldInvalid('servicioseleccionado', 'required')">
+                                    El servicio es requerido.
+                                  </mat-error>
+                                </mat-form-field>
+                              </p>
+                              
+                              
                             <div class="services_selected">
                                 <p><strong><label  class="large-text">Servicios seleccionados:</label></strong></p>
                                 <ul *ngFor="let selected of servicioSeleccionado">
