se agrega lib de spinner

--- a/src/app/modules/plan-lista/membresias.component.html
+++ b/src/app/modules/plan-lista/membresias.component.html
@@ -1,4 +1,5 @@
 <div class="container mt-4">
+  <ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-pulse-sync" [fullScreen] = "true"><p style="color: white" > Cargando... </p></ngx-spinner>
   <h2 class="mb-3">PLANES DISPONIBLES</h2>
 <div style="text-align: right;">
     <button mat-raised-button style="background-color: #fd9727; font-size: 16px;" (click)="openDialog()"><mat-icon>add</mat-icon>AGREGAR PLAN</button>
