--- a/src/app/modules/editar-categoria/editar-categoria.component.html
+++ b/src/app/modules/editar-categoria/editar-categoria.component.html
@@ -1,4 +1,5 @@
-<div class="container mt-4">
+<div class="container mt-4">     
+ <ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-pulse-sync" [fullScreen] = "true"><p style="color: white" > Cargando... </p></ngx-spinner>
     <div class="responsive-div">
        <mat-tab-group >
           <mat-tab label="Categoria" style="font-size: xx-large;">
