--- a/src/app/modules/horarios/horarios.component.html
+++ b/src/app/modules/horarios/horarios.component.html
@@ -1,6 +1,7 @@
 <!-- En tu archivo HTML -->
 <div *ngIf="horarioExistente">
     <br/>
+    <ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-pulse-sync" [fullScreen] = "true"><p style="color: white" > Cargando... </p></ngx-spinner>
     <p style="margin: auto; display: block; text-align: center; font-size: 20px; font-weight: bold;">¡USTED YA AGREGO UN HORARIO!</p>
     <img src="assets/img/tiempo.gif" style="width: 380px; margin: auto; display: block; text-align: center;" alt="tiempo">
     <br>
