--- a/src/app/modules/inventarios/inventarios.component.html
+++ b/src/app/modules/inventarios/inventarios.component.html
@@ -1,4 +1,5 @@
 <div class="container mt-4">
+  <ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-pulse-sync" [fullScreen] = "true"><p style="color: white" > Cargando... </p></ngx-spinner>
     <h2 class="mb-3">Inventarios</h2>
   
     <div style="text-align: left; margin-bottom: 50px">
