--- a/src/app/modules/lista-proveedor/lista-proveedor.component.html
+++ b/src/app/modules/lista-proveedor/lista-proveedor.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-4">
- 
+   <ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-pulse-sync" [fullScreen] = "true"><p style="color: white" > Cargando... </p></ngx-spinner>
     <div style="text-align: right; margin-bottom: 50px;">
        <button mat-raised-button routerLink="../alta-proveedor" style="background-color: #fd9727; font-size: 16px;">
           <mat-icon>add</mat-icon>
