--- a/src/app/modules/membresias-editar/membresias-editar.component.html
+++ b/src/app/modules/membresias-editar/membresias-editar.component.html
@@ -1,4 +1,5 @@
 <br/><br/>
+<ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-pulse-sync" [fullScreen] = "true"><p style="color: white" > Cargando... </p></ngx-spinner>
 <mat-label class="large-text" style="font-family: Arial; font-size: 30px;margin-left: 150px;">Membresías:</mat-label>
 <br/>
 <br/>
