--- a/src/app/modules/ver-configuracion/ver-configuracion.component.html
+++ b/src/app/modules/ver-configuracion/ver-configuracion.component.html
@@ -1,4 +1,5 @@
 <div class="img-container">
+    <ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-pulse-sync" [fullScreen] = "true"><p style="color: white" > Cargando... </p></ngx-spinner>
     <div class="full-width-image">
         <img src="../../../../../assets/img/Imagen3.png" alt="Imagen1">
      </div>
