--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -46,7 +46,7 @@
       </div>
 
       <div class="row mt-4" *ngIf="isSupadmin()">
-         <div class="col-md-6">
+         <!--<div class="col-md-6">
             <div class="card">
                <div class="card-body">
                   <h4 class="card-title">Colaboradores</h4>
@@ -54,7 +54,7 @@
                   <a class="btn btn-gym" routerLink="../colaboradores">Alta colaborador</a>
                </div>
             </div>
-         </div>
+         </div>-->
          <div class="col-md-6" >
             <div class="card">
                <div class="card-body">
