--- a/src/app/modules/sucursal-lista/sucursal-lista.component.html
+++ b/src/app/modules/sucursal-lista/sucursal-lista.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-4">
-   <h2 class="mb-3">Sucursales</h2>
+   <h2 mat-dialog-title class="mb-3">Sucursales</h2>
    <div style="text-align: right; margin-bottom: 50px;">
        <button mat-raised-button (click)="agregarSucursal()" style="background-color: #fd9727; font-size: 16px;">
        <mat-icon>add</mat-icon> AGREGAR SUCURSAL
